fixing alignments

--- a/src/Components/Home/View/MovieItem/MovieItem.scss
+++ b/src/Components/Home/View/MovieItem/MovieItem.scss
@@ -54,7 +54,7 @@
                 display: flex;
                 flex-direction: column;
                 justify-content: space-evenly;
-                width: 200px;
+                width: 180px;
 
                 .movie-item-info-container {
                     display: flex;
